--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+sudo: false
+cache: pip
+
+language: python
+
+python:
+  - "2.7"
+
+virtualenv:
+  system_site_packages: true
+
 install:
   - pip install rstcheck
 
